Add class AutoNSGAIIIT